--- a/style.css
+++ b/style.css
@@ -300,24 +300,95 @@ nav .fas {
     flex-direction: column;
   }
 }
-
-.Enroll {
+/* sekcja kontakt */
+.contact {
   margin: 100px auto;
   width: 80%;
   background-color: #a4f7ef;
   background-position: center;
   background-size: cover;
   border-radius: 10px;
-  text-align: center;
-  padding: 100px 0;
+  /* text-align: center; */
+  /* padding: 100px 0; */
+  /* powyżej stare ustewienia css dla starej sekcji */
+
+  position: relative;
+  min-height: 100vh;
+  /* padding: 50px 100px; */
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  flex-direction: column;
 }
 
-.Enroll h1 {
+.contact .content {
+  max-width: 800px;
+  text-align: center;
+}
+
+.contact .content h2 {
+  font-size: 36px;
+}
+
+.contact .content p {
+  font-weight: 300;
+  color: black;
+}
+
+.container {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 30px;
+}
+
+.contact .contact-info {
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+  margin-left: 50px;
+}
+
+.contact .contact-info .box {
+  position: relative;
+  padding: 20px 0;
+  display: flex;
+  padding: 30px;
+}
+
+.contact .contact-info .box .icon {
+  min-width: 60px;
+  height: 60px;
+  background: #fff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+  font-size: 22px;
+  margin-right: 15px;
+}
+
+.contact .contact-info .box .icon .text {
+  display: flex;
+  margin-left: 20px;
+  font-size: 16px;
+  color: black;
+  flex-direction: column;
+  font-weight: 300;
+}
+
+.contact .contact-info .box .icon .text h3 {
+  font-weight: 500;
+  color: black;
+}
+
+/* .contact h1 {
   color: black;
   margin-bottom: 40px;
   padding: 0;
-}
-.Enroll a {
+} */
+.contact a {
   display: inline-block;
   text-decoration: none;
   color: black;
@@ -330,12 +401,101 @@ nav .fas {
   text-transform: uppercase;
 }
 
-.Enroll a:hover {
+.contact a:hover {
   border: 1px solid black;
   background: black;
   transition: 1s;
   color: #fff;
 }
+
+.contact-form {
+  width: 40%;
+  padding: 40px;
+  background: #fff;
+  margin-right: 50px;
+}
+
+.contact-form h2 {
+  font-size: 30px;
+  color: black;
+  font-weight: 500;
+}
+
+.contact-form .inputBox {
+  position: relative;
+  width: 100%;
+  margin-top: 10px;
+}
+
+.contact-form .inputBox .text {
+  width: 100%;
+  padding: 5px 0;
+  font-size: 16px;
+  margin: 10px 0;
+  border: none;
+  border-bottom: 2px solid #333;
+  outline: none;
+}
+
+.contact-form .inputBox input,
+.contact-form .inputBox textarea {
+  width: 100%;
+  padding: 5px 0;
+  font-size: 16px;
+  margin: 10px 0;
+  border: none;
+  border-bottom: 2px solid #333;
+  outline: none;
+  resize: none;
+}
+
+.contact-form .inputBox span {
+  position: absolute;
+  left: 0;
+  padding: 5px 0;
+  font-size: 16px;
+  margin: 10px 0;
+  pointer-events: none;
+  transition: 0.5s;
+  color: #777;
+}
+
+.contact-form .inputBox input:focus ~ span,
+.contact-form .inputBox input:valid ~ span,
+.contact-form .inputBox textarea:focus ~ span,
+.contact-form .inputBox textarea:valid ~ span {
+  color: #e91e63;
+  font-size: 12px;
+  transform: translateY(-20px);
+}
+
+.contact-form .inputBox input[type="submit"] {
+  width: 100px;
+  background: #a4f7ef;
+  color: black;
+  cursor: pointer;
+  padding: 10px;
+  font-size: 18px;
+  border: none;
+}
+
+@media (max-width: 700px) {
+  .contact {
+    padding: 50px;
+  }
+  .container {
+    flex-direction: column;
+  }
+  .container .contact-info {
+    margin-bottom: 40px;
+  }
+  .container .contact-info {
+    width: 100%;
+    padding: 10px;
+  }
+}
+
+/* -------------- */
 
 .to_top {
   background-color: #a4f7ef;
