add button back_to in video.html

--- a/aboutMe.css
+++ b/aboutMe.css
@@ -34,6 +34,12 @@
   scroll-behavior: smooth;
 }
 
+.to_top:hover {
+  background: black;
+  color: white;
+  transition: 0.5s;
+}
+
 .logo {
   padding: 20px;
 }
