--- a/aboutMe.css
+++ b/aboutMe.css
@@ -80,7 +80,8 @@
 .img {
   width: 25%;
   height: 100px;
-  text-align: center;
+  display: flex;
+  max-width: 100%;
   /* padding: 10px; */
   margin: 2px;
   display: list-item;
@@ -95,7 +96,8 @@
   font-size: 20px;
   text-align: justify;
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  justify-content: right;
   margin-left: auto;
   margin-right: auto;
 }
