--- a/style.css
+++ b/style.css
@@ -443,6 +443,8 @@ nav .fas {
   justify-content: center;
   align-items: center;
   margin-right: 20px;
+  text-decoration: none;
+  color: black;
 }
 
 .social_btw i {
@@ -459,6 +461,34 @@ nav .fas {
   text-decoration: none;
   font-size: 22px;
   color: black;
+  text-decoration: none;
+}
+
+#yt:hover {
+  background-color: black;
+  transition: 0.5s;
+  color: red;
+}
+
+#fb:hover {
+  background-color: black;
+  transition: 0.5s;
+  color: #3b5998;
+}
+
+#inst:hover {
+  background-color: black;
+  transition: 0.5s;
+  color: #d6249f;
+  /* background: radial-gradient(
+    circle at 30% 107%,
+    #fdf497 0%,
+    #fdf497 5%,
+    #fd5949 45%,
+    #d6249f 60%,
+    #285aeb 90%
+  );
+  box-shadow: 0px 3px 10px rgba(0, 0, 0, 0.25); */
 }
 
 .contact a {
