--- a/gallery.css
+++ b/gallery.css
@@ -4,6 +4,7 @@
   font-family: "Poppins", sans-serif;
   scroll-behavior: smooth;
   text-align: center;
+  color: black;
 }
 
 .back_to {
@@ -25,71 +26,46 @@
   scroll-behavior: smooth;
 }
 
-.to_top:hover {
-  background: black;
-  color: white;
-  transition: 0.5s;
-}
-
 .logo {
-  padding: 20px;
-  width: 20%;
-  height: 20%;
+  padding: 10px;
+  width: 30%;
+  height: auto;
   display: block;
   margin-left: auto;
   margin-right: auto;
 }
 
 .gallery-wrapper {
-  min-height: 100vh;
   width: 100%;
-  background-position: center;
+  margin: auto;
+  text-align: center;
+  padding-top: 100px;
+
+  /* background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)),
+    url(img/aboutMe-background.jpg); */
   background-size: cover;
   position: relative;
   background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)),
-    url(img/aboutMe-background.jpg);
-}
-
-.gallery-wrapper h2 {
-  text-align: center;
-  font-size: 36px;
-  font-weight: 600;
-  font-family: "Poppins", sans-serif;
-  padding: 0;
-  color: white;
-}
-
-.gallery-wrapper p {
-  color: white;
+    url(img/News_background.jpg);
 }
 
 .img-area {
   display: flex;
-  flex-wrap: wrap;
   flex-direction: row;
+  flex-wrap: wrap;
   align-items: center;
   justify-content: center;
-
-  margin: auto;
-  text-align: center;
-  padding-top: 60px;
+  margin: 0 10px;
 }
 
 .single-img {
   padding: 0 20px 20px;
-  width: 50%;
-  height: auto;
-}
-
-.single-img {
-  @media (max-width: 700px) {
-    .row {
-      flex-direction: column;
-    }
-  }
 }
 
 .single-img img {
-  width: 40%;
+  align-items: center;
+  max-width: 650px;
   height: auto;
+  border-radius: 10px;
+  border: 3px solid #a4f7ef;
 }
