--- a/gallery.css
+++ b/gallery.css
@@ -27,12 +27,13 @@
 }
 
 .logo {
-  padding: 10px;
+  padding: 5px;
   width: 30%;
   height: auto;
   display: block;
   margin-left: auto;
   margin-right: auto;
+  margin-top: -50px;
 }
 
 .gallery-wrapper {
@@ -40,9 +41,6 @@
   margin: auto;
   text-align: center;
   padding-top: 100px;
-
-  /* background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)),
-    url(img/aboutMe-background.jpg); */
   background-size: cover;
   position: relative;
   background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)),
@@ -58,6 +56,24 @@
   margin: 0 10px;
 }
 
+@media (max-width: 700px) {
+  .img-area {
+    flex-direction: column;
+  }
+  .single-img img {
+    width: 450px;
+  }
+}
+
+@media (max-width: 450px) {
+  .img-area {
+    flex-direction: column;
+  }
+  .single-img img {
+    width: 320px;
+  }
+}
+
 .single-img {
   padding: 0 20px 20px;
 }
@@ -68,4 +84,33 @@
   height: auto;
   border-radius: 10px;
   border: 3px solid #a4f7ef;
+}
+
+.to_top {
+  background-color: #a4f7ef;
+  position: fixed;
+  bottom: 26px;
+  right: 42px;
+  height: 60px;
+  width: 60px;
+  border-radius: 15%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-decoration: none;
+  color: #1f1f1f;
+  opacity: 0;
+  font-size: 22px;
+  pointer-events: none;
+  transition: all 0.5s;
+}
+
+.to_top.active {
+  bottom: 26px;
+  pointer-events: auto;
+  opacity: 1;
+}
+
+.to_top:hover {
+  transition: 0.5s;
 }
