--- a/aboutMe.css
+++ b/aboutMe.css
@@ -94,6 +94,18 @@
   padding: 10px;
 }
 
+@media (max-width: 700px) {
+  .about_text {
+    column-count: 1;
+  }
+}
+
+@media (max-width: 1300px) {
+  .about_text {
+    column-count: 1;
+  }
+}
+
 .img {
   width: 25%;
   height: 100px;
