--- a/cennik.css
+++ b/cennik.css
@@ -54,6 +54,14 @@
   margin-left: auto;
 }
 
+@media (max-width: 700px) {
+  .wrapper1 {
+    flex-direction: column;
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+}
+
 .school {
   flex-basis: 15%;
   background: #a4f7ef;
