--- a/style.css
+++ b/style.css
@@ -264,12 +264,12 @@ nav .fas {
 }
 
 .layer:hover {
-  background: rgba(164, 247, 239, 0.5);
+  background: rgba(164, 247, 239, 0.7);
 }
 
 .layer h3 {
   width: 100%;
-  color: #fff;
+  color: black;
   font-weight: 600;
   font-size: 26px;
   bottom: 0;
@@ -296,7 +296,7 @@ nav .fas {
   font-size: 13px;
   background: transparent;
   position: relative;
-  margin-top: 500px;
+  top: 75%;
   cursor: pointer;
   text-transform: uppercase;
   margin-left: auto;
