--- a/aboutMe.css
+++ b/aboutMe.css
@@ -70,6 +70,17 @@
   text-transform: uppercase;
 }
 
+.header_about_me h2 {
+  color: white;
+  font-size: 30px;
+  padding: 10px;
+  display: flex;
+  justify-content: center;
+  margin-left: auto;
+  margin-right: auto;
+  text-transform: uppercase;
+}
+
 .about {
   /* width: 100%;
   padding: 5px;
@@ -89,7 +100,7 @@
 }
 
 .about_text {
-  column-count: 2;
+  /* column-count: 2; */
   text-align: center;
   padding: 10px;
 }
