--- a/cennik.css
+++ b/cennik.css
@@ -198,6 +198,8 @@
   margin: 0 auto;
   /* padding: 0 1.5rem; */
   padding: 50px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .dropdown_item {
@@ -205,8 +207,10 @@
   border-radius: 15px;
   margin-bottom: 1rem;
   color: black;
-  padding: 1rem;
+  padding: 30px;
   text-decoration: none;
+  margin-right: auto;
+  margin-left: auto;
 }
 
 .dropdown_link {
@@ -218,6 +222,8 @@
   align-items: center;
   justify-content: space-between;
   padding: 1rem 0;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .dropdown_link #minus {
@@ -225,11 +231,59 @@
 }
 
 .dropdown_answer {
+  overflow: scroll;
   max-height: 0;
   overflow: hidden;
   position: relative;
   background-color: #a4f7ef;
   transition: max-height 650ms;
+}
+
+@media (max-width: 700px) {
+  .dropdown_answer {
+    width: 50%;
+    overflow: scroll;
+    flex-direction: column;
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+}
+
+@media (max-width: 768px) {
+  .dropdown_answer {
+    width: 70%;
+    overflow: scroll;
+    flex-direction: column;
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+}
+
+@media (max-width: 700px) {
+  .dropdown_item {
+    width: 70%;
+    flex-direction: column;
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+}
+
+@media (max-width: 1366px) {
+  .dropdown_item {
+    width: 80%;
+    flex-direction: column;
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+}
+
+@media (max-width: 370px) {
+  .dropdown_item {
+    width: 60%;
+    flex-direction: column;
+    padding-left: 10px;
+    padding-right: 10px;
+  }
 }
 
 .dropdown_answer::before {
