--- a/gallery.css
+++ b/gallery.css
@@ -58,19 +58,19 @@
 
 @media (max-width: 700px) {
   .img-area {
-    flex-direction: column;
+    flex-direction: row;
   }
   .single-img img {
-    width: 750px;
+    width: 300px;
   }
 }
 
-@media (max-width: 1300px) {
+@media (max-width: 1366px) {
   .img-area {
-    flex-direction: column;
+    flex-direction: row;
   }
   .single-img img {
-    width: 320px;
+    width: 350px;
   }
 }
 
